--- a/www/partials/addpatient/AddPatient.html
+++ b/www/partials/addpatient/AddPatient.html
@@ -1,8 +1,10 @@
 <ion-view title="慢病信息">
 
+	<ion-nav-bar class="bar-positive nav-title-slide-ios7">
+		<ion-nav-back-button class="button-icon ion-arrow-left-c"></ion-nav-back-button>
+	</ion-nav-bar>
 
-
- <!--  <ion-nav-view name="ModuleInfo"></ion-nav-view> -->
+    <ion-nav-view ></ion-nav-view>
   <!-- <ion-content> -->
     <!-- <div>    
       <ion-list>
