--- a/www/partials/addpatient/newpatient.html
+++ b/www/partials/addpatient/newpatient.html
@@ -11,7 +11,7 @@
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a> -->
 </ion-header-bar>
 	<ion-content>
-	<h4>患者建档进度：</h4><progress max="100" value="15"></progress>
+	<progress max="100" value="15"></progress>
 	
 	<div class="list">
 		<h4>手机号</h4>
