--- a/www/partials/individual/coach.html
+++ b/www/partials/individual/coach.html
@@ -35,6 +35,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button>
   </ion-nav-bar> 
+  <div class="footer-shadow"></div>
   <ion-tabs class="tabs-icon-top tabs-color-active-positive">  
   <ion-tab title="我的患者" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/coach/patients">
     <ion-nav-view name="coach-patients"></ion-nav-view>
