--- a/www/partials/login/signin.html
+++ b/www/partials/login/signin.html
@@ -18,8 +18,8 @@
             </label>
           </div>
           <div class="row" style="padding:0" >
-            <div class="col col-75"><p style="color:#B8B8B8">{{logStatus}}</p></div>
-            <div class="col "><p style="color:#9999cc;text-align:right" ng-click="toReset()">忘记密码</p></div>
+            <div class="col col-75" style="padding-left:0;padding-right:0"><p style="color:#B8B8B8">{{logStatus}}</p></div>
+            <div class="col" style="padding-left:0;padding-right:0"><p style="color:#9999cc;text-align:right" ng-click="toReset()">忘记密码</p></div>
           </div>
 
           <button style="margin-top:0" class="button button-block button-assertive" ng-click="signIn(logOn)">立即登录</button>          
