--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,23 +1,23 @@
 /* Empty. Add your own CSS if you like */
 .item h3 {
-  font-size: 1.3rem;
+  font-size: 1.23rem;
   font-weight: bold;
   color: #417D9A;
 }
 .item h2 {
   font-size: 1.2rem;
-  font-weight: bold;
-  
-  
+  font-weight: bold;   
 }
 .item h1 {
-  font-size: 1rem;
+  font-size: 0.8rem;
     color: #666666;
-    margin-top: 5.6px;
+    margin-top: 8px;
+    font-style: italic
 }
 
 .item-thumbnail-left img {
-  border-radius: 10px;
+  padding:0 !important;
+
 }
 .item-row{
   display: -webkit-box;
@@ -72,6 +72,20 @@
  
 }
 
+.trial {
+  background-color: rgba(38,157,128,0.5);
+  /*border-top: 20px solid rgba(38,157,128,0.5);*/
+}
+
+.item-divider {
+  background-color: rgba(38,157,128,0.2);
+}
+
+.lable-item-item-input{
+  background-color: rgba(38,157,128,0.3);
+  color: #417D9A;
+}
+
 
 #chartdiv2 {#chartdiv2 {
   width   : 100%;
@@ -86,15 +100,75 @@
 
 #chartdiv3 {
   width: 100%;
-  height: 500px;
+  height: 400px;
   font-size : 11px;
 }
 
 .content-item-list{
-  background-color:#EEEEEE;
+  background-color:#E5E5E5;
   padding-top:0 !important;
 }
 .item-margin{
   padding:2px;
   margin:6px;
+  -moz-box-shadow:1px 2px 2px #999;
+  -webkit-box-shadow:1px 2px 2px #999;
+  box-shadow:1px 1.5px 2px #999;
+  /*box-shadow: 1px 1px 0px 1px #CCCCCC;*/
 }
+.bar-shadow{
+  position: absolute;
+  top: 39px;
+  z-index:99;
+  opacity:0.6;
+  display: block;
+  -moz-box-shadow:0px 4px 5px #777;
+  -webkit-box-shadow:0px 4px 5px #777;
+  box-shadow:0px 4px 5px #777;
+  width: 100%;height:4px;
+  background-color: transparent; 
+}
+.sub-bar-shadow{
+  position: absolute;
+  top: 85px;
+  z-index:99;
+  opacity:0.6;
+  display: block;
+  -moz-box-shadow:0px 3px 4px #777;
+  -webkit-box-shadow:0px 3px 4px #777;
+  box-shadow:0px 3px 4px #777;
+  width: 100%;height:3px;
+  background-color: transparent; 
+}
+.footer-shadow{
+  position: absolute;
+  bottom: 45px;
+  z-index:99;
+  opacity:0.5;
+  display: block;
+  -moz-box-shadow:0px -3px 4px #888;
+  -webkit-box-shadow:0px -3px 4px #888;
+  box-shadow:0px -3px 4px #888;
+  width: 100%;height:3px;
+  background-color: transparent; 
+}
+.icon-gray{
+  color:#AAAAAA;
+}
+/*progress{
+  margin: 0px !important;
+  -webkit-progress-bar-value:#FF0000;
+  -webkit-progress-value:#FF0000;
+  -moz-progress-bar:#FF0000;
+ }*/
+
+ progress { border-top:#387ef5 ;margin: 0px !important;background-color: #EAEAEA !important;}
+
+progress::-moz-progress-bar {background-color: #689f38 !important;}
+progress::-webkit-progress-bar-value {background-color: #DDDDDD !important;}
+progress::-webkit-progress-value {background-color: #689f38 !important;}
+/*.olive{
+ background-color:  #689f38;
+}*/
+/*---------------------------------------------------*/
+  
