--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -1,15 +1,16 @@
 <ion-view view-title="计划列表">
+<ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$onClickBackward()">
 		</button>
 	</ion-nav-buttons>
 	<ion-nav-buttons side="secondary">
 		<div class="markDisplay{{create.AddFlag}}">
-			<button class="button icon-right" ng-click="CreatePlan()">
-				<i class="icon ion-plus"></i>
-			</button>
+			<button class="button button-icon icon ion-plus " ng-click="CreatePlan()"></button>
 		</div>
 	</ion-nav-buttons>
+</ion-nav-bar>
+<div class="bar-shadow"></div>
 	<ion-content>
 		<div class="list">
 			<a class="item" href="#/addpatient/taskList" ng-repeat = "item in create.PlanList" ng-click="SavePlanNo(item.PlanNo)">        
