--- a/www/partials/addpatient/plan/taskList.html
+++ b/www/partials/addpatient/plan/taskList.html
@@ -1,9 +1,11 @@
 <ion-view view-title="计划设定">
+<ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<a class="button icon-left ion-chevron-left button-clear button-white" ng-onclick="onClickBackward()">
 		</a>
 	</ion-nav-buttons>
-	
+</ion-nav-bar>
+<div class="bar-shadow"></div>
 	<ion-content>	
 
 		<div style="font-size:15px;color:blue; padding:10px;text-align:center; font-weight:bold">
