--- a/www/partials/managepatient/ModuleInfo.html
+++ b/www/partials/managepatient/ModuleInfo.html
@@ -4,31 +4,25 @@
     <h2 class="title">慢病信息</h2> -->
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a> -->
     <!-- </ion-header-bar> -->
-    <ion-header-bar class="bar-subheader bar-stable">
+<!--   <ion-header-bar class="bar-subheader bar-stable">
     <div class="row" style="padding:0px">
-      <div class="col-75"><h3>{{Name}}      {{gender}}        {{age}}岁
-
-      </h3></div>
-      <div  class="col-25 text-right"> <button class="button icon-right" ng-click="backtocoach()">返回主页
-      </button></div>
-      
-    </div>
-
-    
-  </ion-header-bar>
-  <ion-content class="padding has-subheader">
-
-
-  
-  <div>    
-    <ion-list>
-    <div collection-repeat='Module in ModuleInfo'>
-      <ion-item href="#/manage/ModuleInfo/{{Module.ModuleCode}}">
-      <a class="item item-icon-right" href="#/manage/ModuleInfo/{{Module.ModuleCode}}">{{Module.ModuleName}}</a>
-    </ion-item>
+      <div class="col-75"><h3>{{Name}}      {{gender}}        {{age}}岁</h3></div>
+      <div  class="col-25 text-right"> <button class="button icon-right" ng-click="backtocoach()">返回主页</button></div>    
+    </div>  
+  </ion-header-bar> -->
+  <ion-nav-bar class="bar-positive">
+    <ion-nav-buttons side="left">
+      <button class="button icon button-icon ion-android-home" ng-click="backtocoach()"></button>
+    </ion-nav-buttons>
+  </ion-nav-bar>
+  <ion-content has-bouncing="false">
+    <div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF"> 
+    <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}岁</h3>
   </div>
-</ion-list>
-</div>
-
-</ion-content>
+    <ion-list>    
+      <ion-item  ng-repeat='Module in ModuleInfo' href="#/manage/ModuleInfo/{{Module.ModuleCode}}">
+          <h2>{{Module.ModuleName}}</h2>
+      </ion-item>
+    </ion-list>
+  </ion-content>
 </ion-view>
