--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -1,5 +1,5 @@
 <ion-view title="临床信息">
-<ion-header-bar class="bar-subheader bar-stable">
+<!-- <div class="bar-subheader bar-stable">
 	<div class="row" style="padding:0px">
 		<div class="col-75">
 			<h3>{{Name}}      {{gender}}        {{age}}岁</h3>
@@ -8,29 +8,48 @@
 			<button class="button icon-right" ng-click="backtocoach()">返回主页</button>
 		</div>	
 	</div>
-</ion-header-bar>
+</div> -->
+<ion-nav-bar class="bar-positive">
+    <ion-nav-buttons side="left">
+      <button class="button icon button-icon ion-android-home" ng-click="backtocoach()"></button>
+    </ion-nav-buttons>
+</ion-nav-bar>
+<!-- <ion-head-bar class="bar-positive">
+    
+      <button class="button icon button-icon ion-android-home" ng-click="backtocoach()"></button>
+    
+</ion-head-bar> -->
 
-<ion-content class="padding has-subheader content-item-list">
-	<div class="row">
-		<div class="col-50">
-			<div class="item item-select" style="height:52px"> 
-				<select>
-					<option selected>海军总医院</option>
-				</select>
-			</div>
-		</div>
-		<div class="col-50 ">
-			<div class="item item-input-inset">
-				<p>就诊ID</p>
-				<label class="item-input-wrapper">
-					<input type="text" ng-model="HJZYYID">
-				</label>
-				
-			</div>
-		</div>
+<ion-content has-bouncing="false" class="content-item-list">
+
+
+	<div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF">	
+		<h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}岁</h3>
 	</div>
 
 	<div class="row">
+		<div class="col-50">
+			
+				<select style="width:100%;height:44.5px;background-color:#f4f4f4;border:0px">
+					<option selected>海军总医院</option>
+				</select>
+        	
+		</div>
+		<div class="col-50 ">
+			
+				<!-- <p>就诊ID</p>
+				<label class="item-input-wrapper input-">
+					<input type="text" ng-model="HJZYYID">
+				</label> -->
+				<label class="item item-input" >
+              <span class="input" style="margin-right:16px"><b>ID</b></span>
+              <input type="text" ng-model="HJZYYID" placeholder="就诊ID" >
+            </label>
+			
+		</div>
+	</div>
+
+	<div class="row" style="padding-top:0;padding-bottom:0">
 		<div class="col-75" style="padding-right:2%" >
 			<ionic-datepicker input-obj="datepickerObject" >
 			<button class="button button-block button-stable" >起始日期{{tt}}</button>
@@ -44,13 +63,13 @@
 	<ion-list >
 		<ion-item class="item-margin" ng-repeat='item in cliniclist | orderBy : "-AdmissionDate"'  >
 		<div class="row">
-			<h2 >入院时间：{{item.DischargeDate}} </h2>
+			<b >入院时间：{{item.DischargeDate}} </b>
 		</div>
 		<div class="row">
-			<h2 >出院时间：{{item.DischargeDate}} </h2>		
+			<b>出院时间：{{item.DischargeDate}} </b>		
 		</div>
 		<div class="row">
-			<h2 >就诊号：{{item.VisitId}}</h2>
+			<b >就诊号：{{item.VisitId}}</b>
 		</div>
 		<div class="row">
 			<!-- <div class="col col-33">查看详情：
