--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -1,15 +1,17 @@
 
 <!-- 顶部标签 -->
-<ion-header-bar class="bar-positive">
-<h1 class="title">患者管理</h1>
+<!-- <ion-header-bar class="bar-positive">
 <div class="buttons">
   <button class="button icon-right ion-android-home" ng-click="backtocoach()"></button>
 </div>
-</ion-header-bar>
+</ion-header-bar> -->
+<ion-nav-bar class="bar-positive nav-title-slide-ios7">
+    <ion-nav-back-button class="button-icon ion-arrow-left-c">
+    </ion-nav-back-button>
+</ion-nav-bar>
 
 
-
-<ion-tabs class="tabs-positive tabs-icon-top">
+<ion-tabs class="tabs-stable tabs-icon-top">
 <ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 <ion-nav-view name="plan-tab"></ion-nav-view>
 </ion-tab>
