--- a/www/partials/managepatient/plan/healthEducation.html
+++ b/www/partials/managepatient/plan/healthEducation.html
@@ -1,8 +1,11 @@
 <ion-view view-title="健康教育">
+<ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="Confirm()">
 		</button>
 	</ion-nav-buttons>
+</ion-nav-bar>
+<div class="bar-shadow"></div>
 	<ion-content>
 		<div class="list">
 			<a class="item item-icon-right" ng-repeat = "item in  task.list" href="#/manage/healthEducationDetail" ng-click="SelectType(item.Code)">         
