--- a/www/partials/managepatient/plan/weight.html
+++ b/www/partials/managepatient/plan/weight.html
@@ -1,11 +1,13 @@
 <ion-view view-title="{{task.Title}}">
+<ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="onClickBackward()">
 		</button>
 	</ion-nav-buttons>
-
+</ion-nav-bar>
+<div class="bar-shadow"></div>
 	<ion-content>
-		<ion-checkbox ng-model = "item.ControlType" ng-repeat = "item in task.list">
+		<ion-checkbox  ng-model = "item.ControlType" ng-repeat = "item in task.list">
         {{item.Name}}
         </ion-checkbox>
 		<div style="text-align:center;padding:20px;">
