--- a/www/partials/managepatient/riskdetail.html
+++ b/www/partials/managepatient/riskdetail.html
@@ -16,12 +16,13 @@
 	</ion-view> -->
 
 
-<ion-view view-title="风险评估" hide-nav-bar="true">
+<ion-view title="风险评估" >
 
-<ion-header-bar >
-  <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward1()">返回</button>
-  <div class="h1 title">风险评估</div>
-</ion-header-bar>
+<ion-nav-bar class="bar-positive nav-title-slide-ios7">   
+  <ion-nav-buttons side="left">
+    <button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
+  </ion-nav-buttons>
+</ion-nav-bar>
 
 <ion-content>
 <!-- <ion-slide-box on-slide-changed="slideHasChanged($index)">
