--- a/www/partials/managepatient/tablelist.html
+++ b/www/partials/managepatient/tablelist.html
@@ -1,5 +1,14 @@
-<ion-nav-view >
+<ion-view title="计划情况">
+<ion-nav-bar  class="bar-positive">
+    <ion-nav-buttons side="left">
+        <button class="button icon button-icon ion-android-home" ng-click="backtocoach()"></button>
+    </ion-nav-buttons>
+</ion-nav-bar>
+<div class="footer-shadow"></div>
 <ion-content > 
+  <div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF"> 
+    <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}岁</h3>
+  </div>
 <style>
 #table{
 .col {
@@ -23,85 +32,24 @@
    <a class="button"  href="#/Independent/table" ng-click="showvitalsigns()"> 体征表</a> 
    <a class="button"  href="#/Independent/risk" >风险评估</a>
  </div>
-
-<!-- dayepicker -->
-<!-- <div class="list"> -->
-<!-- <div class="row">
-
-		<div class="rol">
-		<datepicker>
-      <button class="button button-block button-positive"
-		ng-click="startpick()">起始日期</button>
-	</div>
-
-   <div class="rol">
-		<button class="button button-block button-positive"
-		ng-click="endpick()">起始日期</button>
-	</div>
-
-<div class="rol">
-	<button class="button button-block button-positive" ng-click="bowerdata()">查询</button>
+ <div class="item item-margin">
+<div class="row item-margin" style="border:#E3E3E3 1px solid;margin:0">
+  <div class="col-50 text-center">
+    <h4 style="background-color:#DDDDDD;margin:0;padding:5px 0 8px 0;font-size:1em">起始日期</h4>
+    <ionic-datepicker input-obj="datepickerObject">
+      <div  ng-click="setStart()"><b  style="color:#689f38">{{selectedstartdate}}</b></div>
+    </ionic-datepicker>
+  </div>  
+  <div class="col-50  text-center">
+    <h4 style="background-color:#DDDDDD;margin:0;padding:5px 0 8px 0;font-size:1em">结束日期</h4>
+    <ionic-datepicker input-obj="datepickerObject" >
+      <div ng-click="setEnd()"><b  style="color:#689f38">{{selecrtedenddate}}</b></div>
+    </ionic-datepicker>
+  </div>  
 </div>
+<div class="row" style="padding-bottom:0;margin-bottom:0">
+  <button style="padding:0;margin-bottom:0"  class="button button-block button-stable" ng-click="bowerdata()"><h3>查询</h3></button>
 </div>
- -->
-
-<!--    <ionic-datepicker input-obj="datepickerObject">
-        <div>
-        <span>生日</span>
-        <span class="item-note ">
-          {{birthday}}
-        </span>
-      </div>
-        </ionic-datepicker> -->
-
-<!-- 
-    <ionic-datepicker input-obj="datepickerObject"class="col col=80 " >
-    <button class="button button-block button-positive" >起始日期{{selectedstartdate}}</button>
-  </ionic-datepicker> -->
-
-<div class="row" >
-
-          <div class="col">
-
-               <ionic-datepicker input-obj="datepickerObject"class="col col=80 " >
-    <button class="button button-block button-positive"  ng-click="setStart()">起始日期{{selectedstartdate}}</button>
-  </ionic-datepicker>
-
-          </div>  
-<!--           <div class="col" ng-click="setStart()">
-               
-               <ionic-datepicker input-obj="datepickerObject"> 
-               <span>
-                {{selectedstartdate}}
-                </span>
-             </ionic-datepicker>
-
-         </div> -->
-
-                  <div class="col">
-
-               <ionic-datepicker input-obj="datepickerObject"class="col col=80 " >
-    <button class="button button-block button-positive" ng-click="setEnd()">结束日期{{selecrtedenddate}}</button>
-  </ionic-datepicker>
-
-          </div>  
-
-
-<!--          <div class="col">
-            <span class="input-label">结束日期</span> 
-          </div>
-
-          <div class="col" ng-click="setEnd()">
-              <ionic-datepicker input-obj="datepickerObject">
-               <span>
-                {{selecrtedenddate}}
-                </span>
-             </ionic-datepicker>
-
-         </div> -->
-        </div>
-<div class="row">
-  <button  class="button button-block button-positive" ng-click="bowerdata()">查询</button>
 </div>
 <!-- </div>	 -->
 
@@ -134,4 +82,4 @@
   </ion-list>
 
 </ion-content> 
-</ion-nav-view >
+</ion-view >
