--- a/www/partials/managepatient/plan/create.html
+++ b/www/partials/managepatient/plan/create.html
@@ -1,7 +1,7 @@
 <ion-view title="计划列表">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
-		<button class="button icon button-icon ion-android-home" ng-click="$onClickBackward()"></button>
+		<button class="button icon button-icon ion-android-home" ng-click="onClickBackward()"></button>
 	</ion-nav-buttons>
 	<ion-nav-buttons side="secondary">
 			<button class="button icon button-icon ion-plus markDisplay{{create.AddFlag}}" ng-click="CreatePlan()"></button>
