慢病问卷样式调整
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/addpatient/ModuleInfoList.html
+++ b/www/partials/addpatient/ModuleInfoList.html
@@ -4,7 +4,10 @@
       <ion-list>
       <div ng-repeat='Module in ModuleInfoList'>
         <ion-item href="#/addpatient/ModuleInfo/{{Module.CategoryCode}}/{{Module.ItemCode}}"  ng-if="Module.ItemCode.indexOf('0000') > -1">
-          <h2>{{Module.ItemName}}</h2>
+          <a class="item item-icon-right" href="#/addpatient/ModuleInfo/{{Module.CategoryCode}}/{{Module.ItemCode}}">
+              {{Module.ItemName}}
+              <i class="icon ion-chevron-right icon-gray"></i>
+          </a>
         </ion-item>
       </div>
     </ion-list>
