--- a/www/partials/addpatient/ModuleInfo.html
+++ b/www/partials/addpatient/ModuleInfo.html
@@ -4,7 +4,10 @@
     
       <ion-list>
           <ion-item  ng-repeat='Module in ModuleInfo' href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}">
-            <h2>{{Module.ModuleName}}</h2>
+            <a class="item item-icon-right" href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}">
+            	{{Module.ModuleName}}
+	           	<i class="icon ion-chevron-right icon-gray"></i>
+	        </a>
           </ion-item>
       </ion-list>
 
