--- a/www/partials/managepatient/ModuleInfo.html
+++ b/www/partials/managepatient/ModuleInfo.html
@@ -21,7 +21,11 @@
   </div>
     <ion-list>    
       <ion-item  ng-repeat='Module in ModuleInfo' href="#/manage/ModuleInfo/{{Module.ModuleCode}}">
-          <h2>{{Module.ModuleName}}</h2>
+          <a class="item item-icon-right" href="#/manage/ModuleInfo/{{Module.ModuleCode}}">
+            {{Module.ModuleName}}
+            <i class="icon ion-chevron-right icon-gray"></i>
+          </a>
+          
       </ion-item>
     </ion-list>
   </ion-content>
