--- a/www/partials/addpatient/riskdetail.html
+++ b/www/partials/addpatient/riskdetail.html
@@ -1,11 +1,13 @@
 <ion-view title="风险评估">
 
-<ion-nav-bar class="bar-positive nav-title-slide-ios7">   
-  <ion-nav-buttons side="left">
+<ion-nav-bar class="bar-positive nav-title-slide-ios7"> 
+    <ion-nav-back-button class="button-icon ion-arrow-left-c">
+    </ion-nav-back-button>  
+<!--   <ion-nav-buttons side="left">
     <button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
-  </ion-nav-buttons>
+  </ion-nav-buttons> -->
 </ion-nav-bar>
-
+  <div class="bar-shadow"></div> 
 <ion-content>
 <!-- <ion-slide-box on-slide-changed="slideHasChanged($index)">
   <ion-slide>
