--- a/www/partials/managepatient/riskquestion.html
+++ b/www/partials/managepatient/riskquestion.html
@@ -1,14 +1,16 @@
 <ion-view title="信息录入">
 <ion-nav-bar class="bar-positive nav-title-slide-ios7">   
-  <ion-nav-buttons side="left">
+<!--   <ion-nav-buttons side="left">
     <button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
-  </ion-nav-buttons>
+  </ion-nav-buttons> -->
+    <ion-nav-back-button class="button-icon ion-arrow-left-c">
+    </ion-nav-back-button>
 </ion-nav-bar>
 <!-- 
 <ion-header-bar>
   <div class="h1 title">信息录入</div>    
 </ion-header-bar> -->
-
+  <div class="bar-shadow"></div> 
 <ion-content>
 
       <div class = "row">
