增加聊天页面返回home，修复新建患者返回的跳转 完成扫码进患者详情的部分，之前没匹配接口

--- a/www/partials/addpatient/newpatient.html
+++ b/www/partials/addpatient/newpatient.html
@@ -1,15 +1,20 @@
-<ion-view title="基本信息">
+<ion-view title="账号注册" >
 	
 	<!-- <ion-nav-buttons side="right">
 		<a class="button icon ion-android-home" href='#/new/master'>
 		</a>
 	</ion-nav-buttons> -->
-<ion-header-bar>
+<ion-nav-bar class="bar-positive nav-title-slide-ios7">   
+  <ion-nav-buttons side="left">
+    <button class="button button-icon ion-arrow-left-c" ng-click="onClickBack()"></button>
+  </ion-nav-buttons>
+</ion-nav-bar>
+<!-- <ion-header-bar> -->
     
-    <h2 class="title">账号注册</h2>
-    <a class="button icon-right ion-android-home" href='#/coach/patients'></a>
+    <!-- <h2 class="title">账号注册</h2> -->
+    <!-- <a class="button icon-right ion-android-home" href='#/coach/patients'></a> -->
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a> -->
-</ion-header-bar>
+<!-- </ion-header-bar> -->
 	<ion-content>
 	<progress max="100" value="15"></progress>
 	
