--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -1,11 +1,11 @@
-<ion-view view-title = "主页 " >
+<ion-view view-title = "主页 " hide-nav-bar="true">
 
-<!--   <ion-header-bar >
-    <button class="button button-icon icon ion-qr-scanner">扫一扫</button>
-    <div class="h1 title">健康专员主页({{state}})</div>
-    <button class="button button-clear button-dark button-icon icon ion-plus-round">添加</button>
-  </ion-header-bar> -->
-
+  <ion-header-bar class="bar-positive nav-title-slide-ios7">
+    <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()">扫一扫</button>
+    <div class="h1 title">主页</div>
+    <button class="button button-icon icon ion-plus-round" ng-click="addpatient()">新患者</button>
+  </ion-header-bar>
+<!-- 
   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
 
     <ion-nav-buttons side="left">
@@ -14,7 +14,7 @@
     <ion-nav-buttons side="right">
       <button class="button button-icon icon ion-plus-round" ng-click="addpatient()">添加新患者</button>
     </ion-nav-buttons>
-  </ion-nav-bar>
+  </ion-nav-bar> -->
 <div class="bar-shadow"></div>
 <ion-content>
   <div class="list card" style="border:#BBBBBB 1px solid">
