个人信息也生日控件修复 统一了箭头样式，还有几个返回失效的地方

--- a/www/partials/managepatient/druginfo.html
+++ b/www/partials/managepatient/druginfo.html
@@ -1,7 +1,7 @@
 <ion-view >
 <ion-nav-bar align-title="middle" class="bar-positive">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="closedrugModal()">
+		<button class="button button-icon ion-arrow-left-c" ng-click="closedrugModal()">
 		</button>
 	</ion-nav-buttons>
 <!--   <div class="buttons">
