--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -1,9 +1,10 @@
 <ion-view view-title="计划列表">
 <ion-nav-bar class="bar-positive">
-	<ion-nav-buttons side="primary">
+<!-- 	<ion-nav-buttons side="primary">
 		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$onClickBackward()">
 		</button>
-	</ion-nav-buttons>
+	</ion-nav-buttons> -->
+	<ion-nav-back-button class="button-icon ion-arrow-left-c"></ion-nav-back-button>
 	<ion-nav-buttons side="secondary">
 		<div class="markDisplay{{create.AddFlag}}">
 			<button class="button button-icon icon ion-plus " ng-click="CreatePlan()"></button>
