--- a/www/partials/addpatient/plan/personal.html
+++ b/www/partials/addpatient/plan/personal.html
@@ -1,7 +1,7 @@
 <ion-view view-title="个性化定制">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="onClickBackward()">
+		<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
 		</button>
 	</ion-nav-buttons>
 </ion-nav-bar>
