--- a/www/partials/addpatient/plan/taskList.html
+++ b/www/partials/addpatient/plan/taskList.html
@@ -1,7 +1,7 @@
 <ion-view view-title="计划设定">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
-		<a class="button icon-left ion-chevron-left button-clear button-white" ng-onclick="onClickBackward()">
+		<a class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
 		</a>
 	</ion-nav-buttons>
 </ion-nav-bar>
