Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -62,9 +62,8 @@
       科室
       </div>
       <select ng-model="userInfo.DtInfo.dept">
-        <option> 肛肠科 </option>
-        <option> 精神课 </option>
-        <option> 泌尿科 </option>
+        <option> 心内科门诊 </option>
+        <option> 内分泌科 </option>
       </select>
 
     </label>
