Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/chat-detail.html
+++ b/www/partials/managepatient/chat-detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{PatientName}}" id = "userMessagesView">   
+<ion-view cache-view="false" view-title="{{PatientName}}" id = "userMessagesView">   
 <!-- <ion-header-bar class="bar-subheader bar-stable">
         <h2>{{Name}}      {{gender}}        {{age}}岁<button class="button icon-right" ng-click="backtocoach()">返回主页</button></h2>
 
