TDY20151110 修正患者管理中慢病信息药物添加删除错误的BUG及无法删除第二条药物信息的BUG
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/ModuleInfoListDetail.html
+++ b/www/partials/managepatient/ModuleInfoListDetail.html
@@ -54,8 +54,8 @@
             <!-- <div> -->
             <h2 style="background-color: rgba(128,128,128,0.25);padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
             <div class="row">
-              <div class="col-33" style="padding-left:5px" ng-click="addhyperdrug()"><b ><i class="ion-plus-circled" style="color: #689F38"></i> 添加一条 </b></div>
-              <div class="col-33" ng-click="deletehyperdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
+              <div class="col-33" style="padding-left:5px" ng-click="adddiabetesdrug()"><b ><i class="ion-plus-circled" style="color: #689F38"></i> 添加一条 </b></div>
+              <div class="col-33" ng-click="deletediabetesdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
             </div>
               <!-- <a class="button button-clear button-positive" ng-click="adddiabetesdrug()">添加</a> -->
               <!-- <a class="button button-clear button-positive" ng-click="deletediabetesdrug()">删除</a> -->
