健康教育返回与

--- a/www/partials/managepatient/plan/create.html
+++ b/www/partials/managepatient/plan/create.html
@@ -14,7 +14,7 @@
 		<div class="list">
 
 			<a class="item" href="#/manage/taskList" ng-repeat = "item in create.PlanList" ng-click="SavePlanNo(item.PlanNo)">        
-			{{item.PlanNo}}---{{item.PlanName}}：{{item.StartDate}}-{{item.EndDate}}
+			{{item.PlanName}}：{{item.StartDate}}-{{item.EndDate}}
 	        </a>
     	</div>
     	<!-- <div style="text-align:center;padding:20px;">
