--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -15,7 +15,7 @@
 	<ion-content>
 		<div class="list">
 			<a class="item" href="#/addpatient/taskList" ng-repeat = "item in create.PlanList" ng-click="SavePlanNo(item.PlanNo)">        
-			{{item.PlanNo}}---{{item.PlanName}}：{{item.StartDate}}-{{item.EndDate}}
+			{{item.PlanName}}：{{item.StartDate}}-{{item.EndDate}}
 	        </a>
     	</div>
     	<div style="text-align:center;padding:20px;">
