--- a/www/partials/individual/coach-config.html
+++ b/www/partials/individual/coach-config.html
@@ -8,7 +8,7 @@
 
 	<ion-nav-bar class="bar-positive nav-title-slide-ios7">
       <ion-nav-buttons side="left">
-        <button class="button button-icon icon ion-arrow-left-a " ng-click="onClickBackward()"></button>
+        <button class="button button-icon icon ion-arrow-left-c " ng-click="onClickBackward()"></button>
       </ion-nav-buttons>
 	</ion-nav-bar>
 
