Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/addpatient/risk.html
+++ b/www/partials/addpatient/risk.html
@@ -64,14 +64,14 @@
      </div>   
       
        
-      <button class="button button-clear icon ion-star button-assertive"
+<!--       <button class="button button-clear icon ion-star button-assertive"
         ng-click="toggleStar(item)"
-        ng-show="item.star"></button>
+        ng-show="item.star"></button> -->
       
-      <ion-option-button class="button-dark"
+<!--       <ion-option-button class="button-dark"
         ng-click="toggleStar(item)">
         <i class="icon ion-star"></i>
-      </ion-option-button>      
+      </ion-option-button>  -->     
       
    <!--    <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(item)">
       </ion-delete-button>   -->    
