--- a/www/partials/managepatient/risk.html
+++ b/www/partials/managepatient/risk.html
@@ -75,7 +75,7 @@
      </div>   
       
        
-      <button class="button button-clear icon ion-star button-assertive"
+<!--       <button class="button button-clear icon ion-star button-assertive"
         ng-click="toggleStar(item)"
         ng-show="item.star"></button>
       
@@ -89,7 +89,7 @@
       
       <ion-reorder-button class="ion-navicon"
         on-reorder="moveItem(item, $fromIndex, $toIndex)">
-      </ion-reorder-button>
+      </ion-reorder-button> -->
   		
       </ion-item>
   	</ion-list>
