TDY20151110 页面缓存清理
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/ModuleInfo.html
+++ b/www/partials/managepatient/ModuleInfo.html
@@ -1,4 +1,4 @@
-<ion-view title="慢病信息">
+<ion-view cache-view="false" title="慢病信息">
 <!-- <ion-header-bar>
     <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="onClickBackward()"></a>
     <h2 class="title">慢病信息</h2> -->
