--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -1,4 +1,4 @@
-<ion-view title="临床信息">
+<ion-view cache-view="false" title="临床信息">
 <!-- <div class="bar-subheader bar-stable">
 	<div class="row" style="padding:0px">
 		<div class="col-75">
