--- a/www/partials/managepatient/plan/create.html
+++ b/www/partials/managepatient/plan/create.html
@@ -1,4 +1,4 @@
-<ion-view title="计划列表">
+<ion-view  cache-view="false" title="计划列表">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<button class="button icon button-icon ion-android-home" ng-click="onClickBackward()"></button>
